--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ jobs:
   common:
     runs-on: ubuntu-latest
     steps:
-      - name: Calculate version
-        run: echo "version=$(date +'%Y.%m.%d-%H%M').${{ github.sha }}" >> "$GITHUB_ENV"
       - name: Download source
         uses: actions/checkout@v3
         with:
@@ -23,8 +21,7 @@ jobs:
     needs: [ "amd64" ]
     strategy:
       matrix:
-        #os: [ debian-bullseye, debian-bookworm ]
-        os: [ bullseye ]
+        os: [ bullseye, bookworm ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup qemu
@@ -56,7 +53,7 @@ jobs:
   amd64:
     strategy:
       matrix:
-        os: [ bullseye ]
+        os: [ bullseye, bookworm ]
     runs-on: ubuntu-latest
     container:
       image: 84codes/crystal:latest-debian-${{ matrix.os }}
@@ -94,6 +91,8 @@ jobs:
     needs: [ "common", "arm64", "amd64" ]
     runs-on: ubuntu-latest
     steps:
+      - name: Calculate version
+        run: echo "version=$(date +'%Y.%m.%d-%H%M').${{ github.sha }}" >> "$GITHUB_ENV"
       - name: Download invidious common
         uses: actions/download-artifact@v3
         with:
@@ -102,18 +101,18 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: invidious.bullseye.arm64
-      # - name: Download invidious arm64 bookworm
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: invidious.bookworm.arm64.tar.xz
+      - name: Download invidious arm64 bookworm
+        uses: actions/download-artifact@v3
+        with:
+          name: invidious.bookworm.arm64
       - name: Download invidious amd64 bullseye
         uses: actions/download-artifact@v3
         with:
           name: invidious.bullseye.amd64
-      # - name: Download invidious amd64 bookworm
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: invidious.bookworm.amd64.tar.xz
+      - name: Download invidious amd64 bookworm
+        uses: actions/download-artifact@v3
+        with:
+          name: invidious.bookworm.amd64
       - name: Unpack common assets
         run: tar xvf invidious.common.tar.xz
       - name: Generate packages
@@ -142,9 +141,9 @@ jobs:
             arm64
           distro: |
             bullseye
-            #bookworm
+            bookworm
       - name: Release packages
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "invidious_bullseye_${{ env.version }}_amd64.deb,invidious_bullseye_${{ env.version }}_arm64.deb"
+          artifacts: "invidious_bullseye_${{ env.version }}_amd64.deb,invidious_bullseye_${{ env.version }}_arm64.deb,invidious_bookworm_${{ env.version }}_amd64.deb,invidious_bookworm_${{ env.version }}_arm64.deb"
           tag: "v${{ env.version }}"
