--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
               echo "Architecture: $arch" >> invidious_${{ env.version }}_$arch/DEBIAN/control
               echo "Maintainer: selfhoster1312 <selfhoster1312@kl.netlib.re>" >> invidious_${{ env.version }}_$arch/DEBIAN/control
               echo "Description: Invidious is a lightweight Youtube frontend." >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "libssl-dev libxml2-dev libyaml-dev libgmp-dev libevent-dev libpcre3-dev libreadline-dev libsqlite3-dev zlib1g-dev postgresql librsvg2-bin" >> invidious_${{ env.version }}_$arch/DEBIAN/control
+              echo "Depends: libssl-dev, libxml2-dev, libyaml-dev, libgmp-dev, libevent-dev, libpcre3-dev, libreadline-dev, libsqlite3-dev, zlib1g-dev, postgresql, librsvg2-bin" >> invidious_${{ env.version }}_$arch/DEBIAN/control
               dpkg --build invidious_${{ env.version }}_$arch
               mv invidious_${{ env.version }}_$arch.deb invidious_$distro_${{ env.version }}_$arch.deb
             done
