--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,20 +119,20 @@ jobs:
         run: |
           for arch in arm64 amd64; do
             for distro in bullseye bookworm; do
-              mkdir invidious_${{ env.version }}_$arch
-              mkdir -p invidious_${{ env.version }}_$arch/opt/invidious
-              cp -R assets config locales invidious_${{ env.version }}_$arch/opt/invidious
-              mv invidious.$distro.$arch.bin invidious_${{ env.version }}_$arch/opt/invidious/invidious
-              chmod +x invidious_${{ env.version }}_$arch/opt/invidious/invidious
-              mkdir -p invidious_${{ env.version }}_$arch/DEBIAN
-              echo "Package: invidious" >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "Version: ${{ env.version }}" >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "Architecture: $arch" >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "Maintainer: selfhoster1312 <selfhoster1312@kl.netlib.re>" >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "Description: Invidious is a lightweight Youtube frontend." >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              echo "Depends: libssl-dev, libxml2-dev, libyaml-dev, libgmp-dev, libevent-dev, libpcre3-dev, libreadline-dev, libsqlite3-dev, zlib1g-dev, postgresql, librsvg2-bin" >> invidious_${{ env.version }}_$arch/DEBIAN/control
-              dpkg --build invidious_${{ env.version }}_$arch
-              mv invidious_${{ env.version }}_$arch.deb invidious_$distro_${{ env.version }}_$arch.deb
+              DEBDIR=invidious_$distro_${{ env.version }}_$arch
+              mkdir $DEBDIR
+              mkdir -p $DEBDIR/opt/invidious
+              cp -R assets config locales $DEBDIR/opt/invidious
+              mv invidious.$distro.$arch.bin $DEBDIR/opt/invidious/invidious
+              chmod +x $DEBDIR/opt/invidious/invidious
+              mkdir -p $DEBDIR/DEBIAN
+              echo "Package: invidious" >> $DEBDIR/DEBIAN/control
+              echo "Version: ${{ env.version }}" >> $DEBDIR/DEBIAN/control
+              echo "Architecture: $arch" >> $DEBDIR/DEBIAN/control
+              echo "Maintainer: selfhoster1312 <selfhoster1312@kl.netlib.re>" >> $DEBDIR/DEBIAN/control
+              echo "Description: Invidious is a lightweight Youtube frontend." >> $DEBDIR/DEBIAN/control
+              echo "Depends: libssl-dev, libxml2-dev, libyaml-dev, libgmp-dev, libevent-dev, libpcre3-dev, libreadline-dev, libsqlite3-dev, zlib1g-dev, postgresql, librsvg2-bin" >> $DEBDIR/DEBIAN/control
+              dpkg --build $DEBDIR
             done
           done
       - name: Release packages
