Try .deb install

--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,11 +7,12 @@ After=network.target
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__INSTALL_DIR__
-ExecStart=__INSTALL_DIR__/invidious -o invidious.log
+WorkingDirectory=/opt/invidious
+ExecStart=/opt/invidious/invidious -o __INSTALL_DIR__/invidious.log
 RestartSec=2s
 Restart=always
-Environment="SSL_CERT_DIR=/etc/ssl/certs/"
+#Environment="SSL_CERT_DIR=/etc/ssl/certs/"
+Environment="INVIDIOUS_CONFIG_FILE=/var/www/invidious/config.yml"
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these 
