--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,9 @@ jobs:
               echo "Maintainer: selfhoster1312 <selfhoster1312@kl.netlib.re>" >> $DEBDIR/DEBIAN/control
               echo "Description: Invidious is a lightweight Youtube frontend." >> $DEBDIR/DEBIAN/control
               echo "Depends: libssl-dev, libxml2-dev, libyaml-dev, libgmp-dev, libevent-dev, libpcre3-dev, libreadline-dev, libsqlite3-dev, zlib1g-dev, postgresql, librsvg2-bin" >> $DEBDIR/DEBIAN/control
+              echo "Section: devel" >> $DEBDIR/DEBIAN/control
               echo "Components: main" >> $DEBDIR/DEBIAN/control
+              echo "Priority: optional" >> $DEBDIR/DEBIAN/control
               dpkg-deb --build -Zxz $DEBDIR
             done
           done
